--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -8,7 +8,7 @@
 <div th:replace="fragments :: navBar"></div>
 
 <div class="container">
-    <div class="jumbotron">
+    <div class="w3-center w3-padding-large">
         <h1 class="display-3">Kenny's Blog</h1>
         <p class="lead" th:unless="${blogPosts} and ${blogPosts.size()}">No Posts Yet. Sorry!</p>
     </div>
