--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -7,9 +7,9 @@
 <!-- Navbar (sit on top) -->
 <div th:replace="fragments :: navBar"></div>
 
-<div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-        Welcome, Admin!
+<div class="w3-center" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-animate-opacity">
+        <p th:text="${admin_message}"></p>
     </span>
 </div>
 
