--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,9 +9,9 @@
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container" id="home">
-<!--    <div class="w3-display-middle" style="white-space:nowrap;">-->
-<!--        <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">KENNY MANESS</span>-->
-<!--    </div>-->
+    <div class="w3-display-middle" style="white-space:nowrap;">
+        <img src="images/transparentlogo.PNG">
+    </div>
 </div>
 
 <!-- Container (About Section) -->
