--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -9,7 +9,7 @@
 
 <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-        <p th:text="${username}">
+        <p th:text="${user_message}"></p>
     </span>
 </div>
 
