--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,9 +23,9 @@
         <a href="/#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
         <a href="/#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-        <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>
-        <a href="/logout" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-out"></i> LOG OUT</a>
-        <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-in"></i> LOG IN</a>
+<!--        <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>-->
+<!--        <a href="/logout" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-out"></i> LOG OUT</a>-->
+<!--        <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-in"></i> LOG IN</a>-->
     </div>
 
     <!-- Navbar on small screens -->
@@ -33,8 +33,8 @@
         <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
         <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
         <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-        <a href="/blog" class="w3-bar-item w3-button" onclick="toggleFunction()">KENNY'S BLOG</a>
-        <a href="/login" class="w3-bar-item w3-button" onclick="toggleFunction()">LOG IN</a>
+<!--        <a href="/blog" class="w3-bar-item w3-button" onclick="toggleFunction()">KENNY'S BLOG</a>-->
+<!--        <a href="/login" class="w3-bar-item w3-button" onclick="toggleFunction()">LOG IN</a>-->
     </div>
 </div>
 
