static edition ready for hosting

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,35 +17,39 @@
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
     <h3 class="w3-center">ABOUT ME</h3>
-    <p class="w3-center"><em>Music Producer, Web Developer, Dungeon Master</em></p>
-    <p>I have created a fictional "personal" website/blog, which I can use to practice web development and display publicly as a portfolio.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <p class="w3-center"><em>Music Producer, Web Developer, Travel Enthusiast, Dungeon Master</em></p>
+    <p>Hi! My name is Kenny Maness (mə-'ness). Thanks for visiting my official website.
+        On the surface, I’m a web developer and music producer from St. Louis, Missouri.
+        But you’ll have to really get to know me if you want to get any deeper than that.
+        Luckily, you’re in just the right place! </p>
     <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-            <p><b><i class="fa fa-user w3-margin-right"></i>Kenny Maness</b></p><br>
+            <p><b><i class="fa fa-user w3-margin-right"></i>Kenny Maness (me, if you coudn't tell)</b></p><br>
             <img src="images/kenny-portrait.JPG" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
         </div>
 
         <!-- Hide this text on small devices -->
         <div class="w3-col m6 w3-hide-small w3-padding-large">
-            <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>So yeah, welcome to my website! There's not much here at the moment,
+                as I'm currently working on the full version of the site.
+                However, I've provided access to most front-end features that will be in the final version.
+                The final version of this site will serve as the hub for everything Kenny Maness.
+                It will include things like my personal blog, artist updates, and a continuously developing portfolio.
+                <br>
+                I’ll also be integrating my Twitter and Instagram pages (although, admittedly,
+                I haven’t been very active on Instagram) so you’ll be able to see everything right from here.
+                I’m developing the mobile-friendly version of the site alongside the desktop version,
+                so everyone will be able to access all of my content whether or not they have access to a computer.
+                Heck, if I ever start that Dungeons & Dragons campaign I’ve had in my head for far too long,
+                I may create a special blog for it right here. It’s my site, right? I can do whatever I want.</p>
         </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">I'm really good at:</p>
-    <p class="w3-halfwide"><i class="fa fa-music w3-wide"></i>Music Production</p>
+    <p class="w3-halfwide"><i class="fa fa-laptop w3-wide"></i>Web Development</p>
     <div class="w3-light-grey">
         <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
     </div>
-    <p class="w3-halfwide"><i class="fa fa-laptop w3-wide"></i>Web Development</p>
+    <p class="w3-halfwide"><i class="fa fa-music w3-wide"></i>Music Production</p>
     <div class="w3-light-grey">
         <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
     </div>
@@ -85,44 +89,104 @@
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <h3 class="w3-center">MY MUSIC</h3>
     <p class="w3-center">
-        <em>Here are some of the projects that I've published myself or been a part of over the years.<br>
-        Click on the images to make them bigger</em>
+        Music is in my blood. It's a great deal of who I am. For a long time now
+        I've been writing, recording, and releasing musical projects independently
+        and with my best friend Nathan in our band Voyage through my label, Purple Room. Feel free to check it out!
+        <br>
+        <em>click on the images to view full-size</em>
     </p><br>
 
     <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
     <div class="w3-row-padding w3-center">
         <div class="w3-col m3">
-            <img src="images/album-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Dreamwaves EP">
+            <img src="images/album-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Dreamwaves EP - This is my & Nathan's very first project as Voyage. It's a bit dinky and amateurish, but we made it simply because we loved the process.">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-2.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lost Transmissions">
+            <img
+                    src="images/album-2.png"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="Lost Transmissions - Voyage's first full-length album.
+                        We'd actually invested in this one. This was a monumental stepping stone for us as artists,
+                        and this album is very dear to each of us."
+            >
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-3.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coordinates">
+            <img
+                    src="images/album-3.png"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="Coordinates - Voyage's second album.
+                        This one is chock full of experimentation.
+                        We had a lot of fun, although admittedly it was a bit rushed."
+            >
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Tell Me (That You Still Care)">
+            <img
+                    src="images/album-4.jpg"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="Tell Me (That You Still Care) - This is the first song Nathan and I wrote separately,
+                        while I was living in Sweden and he'd moved to Seattle.
+                        This was the first step to our next album."
+            >
         </div>
     </div>
 
     <div class="w3-row-padding w3-center w3-section">
         <div class="w3-col m3">
-            <img src="images/album-5.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img
+                    src="images/album-5.png"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="From Stockholm To Seattle - Voyage's latest album. Our pride and joy.
+                        We took a total of five years from start to finish to make this one.
+                        The majority of it was written and produced from opposite ends of the world, hence the name."
+            >
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Everything Was Completely Silent">
+            <img
+                    src="images/album-6.jpg"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="Everything Was Completely Silent - This was my first single I released as a solo artist,
+                        back when I was going to college in Utah. During a particularly depressive month,
+                        I shut myself in my room for an entire night and wrote, recorded, and released this
+                        right before I had to leave for class in the morning. Would not recommend."
+            >
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-7.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Somna">
+            <img
+                    src="images/album-7.png"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="Somna - This is the EP that was borne out of the single I'd released in college.
+                        I needed something to help me relax and get to sleep,
+                        so I took matters into my own hands. This is the result."
+            >
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album-8.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My Shiny Teeth And Me">
+            <img
+                    src="images/album-8.jpeg"
+                    style="width:100%"
+                    onclick="onClick(this)"
+                    class="w3-hover-opacity"
+                    alt="My Shiny Teeth And Me - Perhaps what I'm best known for, at least online.
+                        This is a unique project, and to this date, my only cover song.
+                        I spent months of passion and care on this, and I'm so very proud of it."
+            >
         </div>
     </div>
 
@@ -174,9 +238,9 @@
         <div class="w3-col m8 w3-panel">
             <div class="w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>St. Louis, MO<br>
-                <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>+1 (618) 555-1234<br>
+<!--                <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>+1 (618) 555-1234<br>-->
                 <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>kenneth.l.maness@gmail.com<br>
-                <i class="fa fa-facebook fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.facebook.com/kennethlewismaness">Facebook</a><br>
+<!--                <i class="fa fa-facebook fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.facebook.com/kennethlewismaness">Facebook</a><br>-->
                 <i class="fa fa-instagram fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.instagram.com/kenny.maness/">Instagram</a><br>
                 <i class="fa fa-twitter fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://twitter.com/kenny_maness">Twitter</a><br>
                 <i class="fa fa-bandcamp fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://kennymaness.bandcamp.com/">Bandcamp</a><br>
